[gd_scene load_steps=6 format=3 uid="uid://dh8qlqu7w034s"]

[ext_resource type="Theme" uid="uid://cptjb4qs2ykw3" path="res://assets/main_theme.tres" id="1_6dh0b"]
[ext_resource type="Script" path="res://song_button.gd" id="1_acpfs"]
[ext_resource type="AudioStream" uid="uid://c1u8jm7g4uy40" path="res://sfx/navigate.wav" id="2_f0jyy"]
[ext_resource type="StyleBox" uid="uid://qm7tk2qave3t" path="res://assets/song_focus.tres" id="2_snbov"]
[ext_resource type="AudioStream" uid="uid://cfxi077u3eube" path="res://sfx/Enter.wav" id="3_k8po8"]

[node name="SongButton" type="Button"]
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("1_6dh0b")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = ExtResource("2_snbov")
theme_override_styles/pressed = ExtResource("2_snbov")
theme_override_styles/focus = ExtResource("2_snbov")
text = "Känner du någon med blöja"
alignment = 2
script = ExtResource("1_acpfs")

[node name="Focus" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_f0jyy")

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_k8po8")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
